# meson-f2py

./: .gitignore  Makefile  README.md  meson.build  pyproject.toml  test.py
src/: add.f  meson.build
